tiny fix to collapse in-article ad

--- a/client/components/ads/main.scss
+++ b/client/components/ads/main.scss
@@ -15,6 +15,7 @@ $ad-medium-breakpoint: 760px;
 }
 
 .above-header-advert,
+.in-article-advert,
 .bottom-advert-mobile {
 	&.o-ads--empty,
 	&[data-o-ads-loaded="false"] {
